# mouselock

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.xmake/windows/x64/cache/: detect  history  toolchain
include/: common_utils.h  core.h  keyword.h  mouse.h  times.h
include/json_utils/: json_utils.h
src/: CMakeLists.txt  global_config.json  gui.cpp  gui.h  gui.ui  main.cpp  qt_std1.cpp  qt_std1.h  qt_std1.ui
src/blue_screen/: CMakeLists.txt  blue_screen.cpp  blue_screen.h
src/camera/: CMakeLists.txt  camera_utils.cpp  camera_utils.h
src/core/: CMakeLists.txt  core.cpp
src/core/blue_screen/: CMakeLists.txt  blue_screen.h
src/core/global_count/: CMakeLists.txt  global_count.cpp  global_count.h
src/core/tools/: CMakeLists.txt  keyword.cpp  mouse.cpp  times.cpp
src/global_count/: CMakeLists.txt  global_count.cpp  global_count.h
src/json_utils/: CMakeLists.txt  json.cpp
src/tools/: CMakeLists.txt  keyword.cpp  mouse.cpp  times.cpp
src/utils/: logger.h
